Networking/Ingresses/hub-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: hub-ingress
  namespace: cicd
  generation: 1
  creationTimestamp: '2023-11-13T14:47:25Z'
  annotations:
    nginx.ingress.kubernetes.io: /$1
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2023-11-13T14:47:25Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:nginx.ingress.kubernetes.io': {}
        'f:spec':
          'f:rules': {}
    - manager: kubectl-patch
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2023-11-13T15:54:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:ingressClassName': {}
spec:
  ingressClassName: openshift-default
  rules:
    - host: cicd-hub.apps.xyz.xyz.com
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: hub
                port:
                  number: 30001
status:
  loadBalancer: {}
